# xarray-jsonschema

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/jupyter_execute/: user_guide.ipynb
docs/jupyter_execute/examples/: data_array_schema.ipynb  data_vars_schema.ipynb  dataset_schema.ipynb  dims_schema.ipynb  dtype_schema.ipynb  shape_schema.ipynb
docs/jupyter_execute/user_guide/: coords_schema.ipynb  index.ipynb  name_schema.ipynb
docs/jupyter_execute/user_guide/components/: attrs_schema.ipynb  name_schema.ipynb
docs/source/: api.md  api.rst  conf.py  get_started.rst  index.md  index.rst  user_guide.ipynb  user_guide.rst
docs/source/user-guide/: components.rst  data_array_schema.rst  dataset_schema.rst  index.rst
docs/source/user_guide/: index.md
src/xarray_jsonschema/: __init__.py  _normalizers.py  _version.py  base.py  builders.py  components.py  containers.py  converters.py  data_array.py  dataset.py  encoders.py  exceptions.py  model.py  schema.py  serializers.py  strategies.py  testing.py  typing.py  utilities.py  validator.py
src/xarray_model/: __init__.py  base.py  components.py  containers.py  data_array.py  dataset.py  testing.py  types.py
tests/: _strategies.py  conftest.py  strategies.py  test_attrs.py  test_chunks.py  test_data_array.py  test_dims.py  test_dtype.py  test_model.py  test_name.py  test_schema_builder.py  test_shape.py
tests/test_components/: test_attrs.py  test_chunks.py  test_dims.py  test_dtype.py  test_name.py  test_shape.py  test_size.py
tests/test_containers/: _strategies.py  test_data_array.py  test_dataset.py
