[project]
name = "xarray-jsonschema"
version = "0.0.0"
description = "A JSON Schema powered validation library for xarray objects"
authors = [
    { name = "Mike Blackett", email = "27811528+mikeblackett@users.noreply.github.com" },
]
dependencies = [
    "xarray>=2025.6.1",
    "numpy<2.3",
    "jsonschema>=4.24.0",
    "pandera>=0.24.0",
    "genson>=1.3.0",
    "attrs>=25.4.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "coverage>=7.8.1",
    "hypothesis>=6.131.31",
    "pyright>=1.1.402",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "pooch>=1.8.2",
    "netcdf4>=1.7.3",
]
[project.optional-dependencies]
dask = [
    "dask>=2025.5.0",
]
docs = [
    "myst-nb>=1.3.0",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["livecov"]

[tool.pytest.ini_options]
addopts = "--cov=xarray_jsonschema --cov-report=xml --cov-report=term"
testpaths = ["tests"]

