[project]
name = "xarray-jsonschema"
version = "0.0.0"
description = "A JSON Schema powered validation library for xarray objects"
authors = [
    { name = "Mike Blackett", email = "27811528+mikeblackett@users.noreply.github.com" },
]
dependencies = [
    "xarray>=0.18.0", # >=0.18.0 required for `to_dict(data=False)`
    "numpy",
    "jsonschema",
    "genson>=1.2.0", # v>=1.2.0 required for custom builders
    "attrs>=25.4.0", # v>=25.4.0 required for changes to `kw_only` 
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "ipykernel",
    "pip",
    "pyright",
    "ruff",
    { include-group = "docs" },
    { include-group = "test" },
]
docs = [
    "myst-nb",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]
test = [
    "coverage",
    "hypothesis",
    "pytest",
    "pytest-cov",
]
[project.optional-dependencies]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["livecov"]

[tool.pytest.ini_options]
addopts = "--cov=xarray_jsonschema --cov-report=xml --cov-report=term"
testpaths = ["tests"]

